[project]
name = "stream-processing-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "kafka-python>=2.3.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "psycopg2>=2.9.11",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.48",
]
